--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -152,7 +152,9 @@ button, .btn
   &.publish
     +button($color-success, 3px, true)
   &.cancel
-    +button($color-text-light, 3px, false)
+    +button($color-text-light, 3px)
+  &.delete
+    +button($color-danger, 3px)
 
 .btn-group
   display: inline-flex
