--- a/src/templates/nodes/custom/dillo_post/edit.pug
+++ b/src/templates/nodes/custom/dillo_post/edit.pug
@@ -2,5 +2,7 @@
 | {% set page_name = 'post-edit' %}
 | {% block bodyattrs %}{{ super() }} class="{{ page_name }}" data-context='{{ page_name }}'{% endblock %}
 | {% block page_title %}Edit{% endblock %}
-| {% include 'nodes/custom/dillo_post/edit_embed.html' %}
+
+// Using a Jinja include statement does not provide the desired results
+include edit_embed.pug
 
