--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -26,6 +26,9 @@ $color-secondary: #e74c3c
 $color-vote-up: #ff8b60
 $color-vote-down: #74a4ff
 
+$color-type-link: #C7E877
+$color-type-text: #77E8D7
+
 $header-bar-pri-size: 46px
 
 $widget-min-height: 30px
