--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -6,7 +6,7 @@ $font-size: 16px
 $font-size-smaller: 10px
 $font-size-small: 12px
 $font-size-large: 18px
-$font-size-extra-large: 22px
+$font-size-extra-large: 20px
 
 /* Colors */
 $color-background: #EaEbEf
@@ -21,6 +21,7 @@ $color-text-light: rgba($color-text, .8)
 $color-text-hint: rgba($color-text, .5)
 
 $color-primary: #4c7e93
+$color-primary-active: hsl(hue($color-primary), 60%, 45%)
 $color-secondary: #e74c3c
 
 $color-vote-up: #ff8b60
