Fix edit_embed layout

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -477,6 +477,7 @@ body[data-context="post-edit"]
         flex: 1
         text-decoration: none
         color: $color-text-dark-primary
+        word-break: break-all
         &:hover
           text-decoration: underline
           color: $color-primary
