Style submit button when not logged in

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -188,7 +188,7 @@ button, .btn
     font-size: 1em
     padding-right: 10px
 
-  button
+  button, .btn
     border-top-right-radius: 0 !important
     border-bottom-right-radius: 0 !important
 
