Spoon: Use the first retrieved image if none is set yet

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -69,6 +69,7 @@ $item-thumbnail-size: 80px
           opacity: 1
 
       img
+        margin: 0 auto
         max-height: $item-thumbnail-size
         max-width: 100%
         min-height: $item-thumbnail-size
