Style tweak to list item selected

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1,3 +1,13 @@
+::-webkit-scrollbar
+  width: 5px
+  height: 5px
+
+::-webkit-scrollbar-track
+  background-color: $color-background-dark
+
+::-webkit-scrollbar-thumb
+  background-color: rgba($color-background-darker, .3)
+
 a:hover
   color: $color-primary
 
@@ -32,6 +42,8 @@ a:hover
             border-radius: 3px
             margin-top: 15px
 
+#col_main
+  background-color: $color-background-dark
 
 #col_right
   background-color: $color-background-lighter
