--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -91,7 +91,7 @@ script.
 					'<a href="" class="item-title js-item-open">{{ name }}</a>' +
 					'<ul>' +
 						'{{#is_link}}' +
-							'<li>' +
+							'<li class="item-favicon">' +
 								'<a href="{{ link_url }}" target="_blank">' +
 									'<img title="Link" src="http://www.google.com/s2/favicons?domain={{ link_url }}"/>' +
 								'</a>' +
