--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -6,12 +6,14 @@ html(lang='en')
 			| {% if self.page_title() %}{% block page_title %}{% endblock %} — {% endif %}Dillo
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
-		| {% block head %}{% endblock %}
+		| {% block head %}{% endblock head %}
 		link(href='//fonts.googleapis.com/css?family=Oxygen|Open+Sans', rel='stylesheet', type='text/css')
 		link(href="{{ url_for('static_pillar', filename='assets/css/font-pillar.css', v=171120161) }}", rel='stylesheet')
 		link(href="{{ url_for('static_dillo', filename='css/main.css', v=171120161) }}", rel='stylesheet')
 
-		| {% block style %}{% endblock %}
+		| {% block og %}{% endblock og %}
+
+		| {% block style %}{% endblock style %}
 
 	body({% block bodyattrs %}{%endblock%})
 		#app-header
@@ -145,4 +147,4 @@ html(lang='en')
 		script(src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.2.3")
 		script(src='https://cdn.jsdelivr.net/instantsearch.js/1/instantsearch.min.js')
 
-		| {% block footer_scripts %}{% endblock %}
+		| {% block footer_scripts %}{% endblock footer_scripts %}
